# itrigamma

./: MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml  wheels.yml
itrigamma/: __init__.py
python/: citrigamma.pyx
r/: RCall_itrigamma.c
src/: RCall_itrigamma.c  citrigamma.c  itrigamma.c  itrigamma.h  setup.py
