[build-system]
requires = [
  "setuptools>=68",
  "wheel",
  "Cython>=3.0",
  "numpy>=2.0",
  "build>=1.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "itrigamma"
version = "0.2.0a0"
description = "A dedicated implementation of inverse-trigamma and related functions written in C, with bindings for Python and R."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Nolan Hamilton" }]
dependencies = ["numpy>=2.0", "cython>=3.0", "setuptools>=68", "build>=1.0.0"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["itrigamma"]
